[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/primary_almendra.tres" type="DynamicFontData" id=2]
[ext_resource path="res://assets/scripts/upgrade.gd" type="Script" id=3]
[ext_resource path="res://assets/sound/upgrade.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/sprites/icons/rhombus_question.png" type="Texture" id=5]
[ext_resource path="res://assets/scripts/openHelp.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/ui/upgrade_item.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.607735, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="upgrade" type="Control"]
margin_right = 480.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
mix_target = 1
bus = "Effect"

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 0.462745, 0.462745, 0.462745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.792157 )

[node name="Control" type="Control" parent="."]
anchor_right = 0.2
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="LabelLevel" type="Label" parent="."]
anchor_left = 0.73
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "20/20"
align = 1
valign = 1

[node name="LabelTitle" type="Label" parent="."]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 0.5
custom_fonts/font = SubResource( 2 )
text = "Upgrade Cursor"
valign = 1

[node name="LabelPrice" type="Label" parent="."]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.847059, 0.831373, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "$5000"
valign = 1

[node name="MouseOverlay" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 412, 54 )
emitting = false
amount = 20
lifetime = 0.7
one_shot = true
speed_scale = 1.58
explosiveness = 0.65
randomness = 0.16
emission_shape = 1
emission_sphere_radius = 19.79
gravity = Vector2( 0, -100 )
linear_accel = 42.2
radial_accel = 400.0
radial_accel_random = 0.21
scale_amount = 3.0
color = Color( 1, 0.968627, 0, 1 )
color_ramp = SubResource( 4 )

[node name="Help" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 0.07
anchor_bottom = 0.3
mouse_default_cursor_shape = 2
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="Help"]
modulate = Color( 0.87451, 0.572549, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 0.02
color = Color( 0, 0, 0, 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="MouseOverlay" to="." method="_on_MouseOverlay_button_down"]
[connection signal="button_down" from="Help" to="Help" method="_on_Help_button_down"]
